<resources>
    <string name="app_name" translatable="false">Power</string>

    <string name="unauthentic_app">Unauthentic app</string>
    <string name="unauthentic_version_general">You\'re using an unauthentic version of Power. Some features may not be available.</string>
    <string name="unauthentic_version_feature">Because you\'re using an unauthentic version of %1$s, you don\'t have access to this feature. Too bad.</string>

    <string name="type_code">Type the code.</string>
    <string name="abc" translatable="false">ABC</string>
    <string name="def" translatable="false">DEF</string>
    <string name="ghi" translatable="false">GHI</string>
    <string name="jkl" translatable="false">JKL</string>
    <string name="mno" translatable="false">MNO</string>
    <string name="pqrs" translatable="false">PQRS</string>
    <string name="tuv" translatable="false">TUV</string>
    <string name="wxyz" translatable="false">WXYZ</string>

    <string name="close">Close</string>

    <string name="title">Title</string>
    <string name="incompatible_device_dialog_title">Incompatible device</string>
    <string name="welcome_to_dialog_title">Welcome to %1$s!</string>
    <string name="beta_version_dialog_title">Beta version</string>
    <string name="congratulations">Congratulations!</string>

    <string name="message">Message</string>
    <string name="incompatible_device_dialog_message">Unfortunately, your device is incompatible with %1$s due to its screen size. Tap \"OK\" to close the app.</string>
    <string name="welcome_to_dialog_message">%1$s is a powerful calculator that lets you easily calculate expressions and convert units like Celsius to Fahrenheit, meter to kilometer, liter to barrel and much more! This is CalcOne, but taken to a whole new level.\n\nHope you enjoy it!</string>
    <string name="dark_mode_compatible_message">%1$s is compatible with Android\'s dark mode. Would you like to enable it now?</string>
    <string name="dark_mode_app_message">%1$s is compatible with dark mode. Would you like to enable it now?</string>
    <string name="beta_version_dialog_message">You are using a beta version of %1$s. That means there may be some bugs, crashes and/or missing features.</string>
    <string name="congratulations_night_mode_unlock">You discovered the secret code and Night mode has been freely unlocked. To enable it, go to Settings.</string>
    <string name="hidden_mode_set_password_dialog_message">Set a 4-digit PIN.</string>

    <string name="ok_ill_never_download_an_app_from_an_untrustable_store_just_to_get_paid_features_for_free_again">Sure, take me to Google Play</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="success">Success</string>
    <string name="action_success">The action was successfully performed.</string>

    <string name="info">Info</string>
    <string name="action_info">The action was performed.</string>

    <string name="warning">Warning</string>
    <string name="action_warning">The action may not could have been performed.</string>

    <string name="error">Error</string>
    <string name="action_error">The action couldn\'t be performed.</string>

    <string name="settings">Settings</string>
    <string name="hidden_mode">Hidden Mode</string>
    <string name="hidden_mode_pro_only">Hidden Mode is only available in %1$s Pro version.</string>
    <string name="hidden_mode_definition">Hidden Mode is a feature that allows you to securely store images in the calculator with a password.</string>
    <string name="hidden_mode_disable">Disabling Hidden Mode will remove all the stored files.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="night_locked">Night mode is locked. Find a way to unlock it.</string>
    <string name="night_pro">Night is available in %1$s Pro version.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_email_subject">%1$s %2$s feedback</string>
    <string name="source_code">Source code</string>
    <string name="credits">Credits</string>

    <string name="app_plus" translatable="false">%1$s+</string>
    <string name="get_app_plus">Get %1$s+</string>

    <string name="get">Get</string>
    <string name="get_plus_subtitle">Unlock all the possibilities.</string>
    <string name="conversions">Conversions</string>
    <string name="conversions_length_item_units" translatable="false">• %1$s\n• %2$s\n• %3$s\n• %4$s\n• %5$s\n• %6$s\n• %7$s\n• %8$s\n• %9$s</string>

    <string name="name">Name</string>
    <string name="device_model">Device model</string>
    <string name="api_x" translatable="false">API %1o</string>
    <string name="no_internet_connection">No Internet connection available.</string>
    <string name="waitlist_request_sent">You\'ve been added to the waitlist.</string>
    <string name="waitlist_request_already_sent">You\'ve already been added to the waitlist.</string>

    <string name="at_developer" translatable="false">\@jeanbarrossilva</string>
    <string name="version_x" translatable="false">%1$s %2$s</string>
    <string name="version">Version</string>

    <string name="zero" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="comma" translatable="false">,</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>

    <string name="equal" translatable="false">=</string>

    <string name="x_power_two" translatable="false">x²</string>

    <string name="left_parenthesis" translatable="false">(</string>
    <string name="right_parenthesis" translatable="false">)</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="times" translatable="false">×</string>
    <string name="division" translatable="false">÷</string>

    <string name="buy_pro_features_description">This feature is only available in %1$s Pro. By buying it, you also get:\n\n• %2$s\n• %3$s\n• %4$s\n• %5$s</string>
    <string name="conversions_all">Conversions (length, time, temperature and more)</string>
    <string name="ads_removal">Ads removal</string>

    <string name="buy">Buy</string>

    <string name="temporarily_unavailable_feature">This feature is temporarily unavailable.</string>
    <string name="calculator">Calculator</string>
    <string name="length">Length</string>
    <string name="time">Time</string>
    <string name="temperature">Temperature</string>

    <string name="from">From</string>
    <string name="to">To</string>

    <string name="light_year">Light-year</string>
    <string name="light_year_symbol">ly</string>

    <string name="kilometer">Kilometer</string>
    <string name="kilometer_symbol" translatable="false">km</string>

    <string name="hectometer">Hectometer</string>
    <string name="hectometer_symbol" translatable="false">hm</string>

    <string name="decameter">Decameter</string>
    <string name="decameter_symbol" translatable="false">dam</string>

    <string name="meter">Meter</string>
    <string name="meter_symbol" translatable="false">m</string>

    <string name="decimeter">Decimeter</string>
    <string name="decimeter_symbol" translatable="false">dm</string>

    <string name="centimeter">Centimeter</string>
    <string name="centimeter_symbol" translatable="false">cm</string>

    <string name="millimeter">Millimeter</string>
    <string name="millimeter_symbol" translatable="false">mm</string>

    <string name="micrometer">Micrometer</string>
    <string name="micrometer_symbol" translatable="false">μm</string>

    <string name="year">Year</string>
    <string name="year_symbol">y</string>

    <string name="month">Month</string>
    <string name="month_symbol" translatable="false">m</string>

    <string name="day">Day</string>
    <string name="day_symbol" translatable="false">d</string>

    <string name="hour">Hour</string>
    <string name="hour_symbol" translatable="false">h</string>

    <string name="minute">Minute</string>
    <string name="minute_symbol" translatable="false">min</string>

    <string name="second">Second</string>
    <string name="second_symbol" translatable="false">s</string>

    <string name="millisecond">Millisecond</string>
    <string name="millisecond_symbol" translatable="false">ms</string>

    <string name="celsius" translatable="false">Celsius</string>
    <string name="celsius_symbol" translatable="false">°C</string>

    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="fahrenheit_symbol" translatable="false">°F</string>

    <string name="kelvin" translatable="false">Kelvin</string>
    <string name="kelvin_symbol" translatable="false">K</string>

    <string name="infinity">Infinity</string>

    <string name="hidden_mode_set_up_success">Hidden Mode was successfully set up. Type in your PIN and hit \"=\" to enter.</string>

    <string name="an_error_occurred">An error occurred.</string>
    <string name="hidden_mode_pin_empty">The PIN field can\'t be empty.</string>
    <string name="hidden_mode_pin_at_least_4_digits">The PIN must contain at least 4 digits.</string>
    <string name="hidden_only_mode_pin_4_digits">The PIN must contain only 4 digits.</string>
</resources>