<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/light_year"
        android:title="@string/light_year" />
    
    <item
        android:id="@+id/kilometer"
        android:title="@string/kilometer" />
    
    <item
        android:id="@+id/hectometer"
        android:title="@string/hectometer" />
    
    <item
        android:id="@+id/decameter"
        android:title="@string/decameter" />

    <item
        android:id="@+id/mile"
        android:title="@string/mile" />
    
    <item
        android:id="@+id/meter"
        android:title="@string/meter" />
    
    <item
        android:id="@+id/decimeter"
        android:title="@string/decimeter" />
    
    <item
        android:id="@+id/centimeter"
        android:title="@string/centimeter" />
    
    <item
        android:id="@+id/millimeter"
        android:title="@string/millimeter" />

    <item
        android:id="@+id/micrometer"
        android:title="@string/micrometer" />
    
</menu>