<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keypad_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keypad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keypad"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/seven"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/four"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/eight"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/four"
                    app:layout_constraintStart_toEndOf="@+id/seven" />

                <Button
                    android:id="@+id/four"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/four"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/one"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/nine"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/six"
                    app:layout_constraintStart_toEndOf="@+id/eight" />

                <Button
                    android:id="@+id/five"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/five"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/two"
                    app:layout_constraintStart_toEndOf="@+id/four" />

                <Button
                    android:id="@+id/six"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/six"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/three"
                    app:layout_constraintStart_toEndOf="@+id/five" />

                <Button
                    android:id="@+id/one"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/one"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/zero"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/two"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/two"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/zero"
                    app:layout_constraintStart_toEndOf="@+id/one" />

                <Button
                    android:id="@+id/three"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:layout_marginBottom="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/three"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/decimal_separator"
                    app:layout_constraintStart_toEndOf="@+id/two" />

                <Button
                    android:id="@+id/zero"
                    android:layout_width="148.5dp"
                    android:layout_height="70dp"
                    android:background="@drawable/keypad_button"
                    android:paddingStart="30dp"
                    android:text="@string/zero"
                    android:textAlignment="viewStart"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/decimal_separator"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8.5dp"
                    android:background="@drawable/keypad_button"
                    android:text="@string/dot"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/zero" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/delete"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/backspace"
            app:layout_constraintBottom_toBottomOf="@+id/keypad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/keypad"
            app:layout_constraintTop_toTopOf="@+id/keypad" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>