<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <Button
            android:id="@+id/celsius"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:text="@string/celsius"
            android:textColor="@android:color/white"
            android:background="@drawable/calculator_mode_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <Button
            android:id="@+id/fahrenheit"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:text="@string/fahrenheit"
            android:textColor="@android:color/white"
            android:background="@drawable/calculator_mode_item"
            app:layout_constraintTop_toBottomOf="@+id/celsius"
            app:layout_constraintEnd_toEndOf="parent" />
    
        <Button
            android:id="@+id/kelvin"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:text="@string/kelvin"
            android:textColor="@android:color/white"
            android:background="@drawable/calculator_mode_item"
            app:layout_constraintTop_toBottomOf="@+id/fahrenheit"
            app:layout_constraintEnd_toEndOf="parent" />
    
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>